examples/test/testpolicy3920.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy3920
  namespace: namespace151
spec:
  podSelector:
    matchLabels:
      key27: value43
      key47: value6
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key11: value21
          key12: value5
      podSelector:
        matchLabels:
          key48: value0
          key42: value33
          key47: value21
